--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* Början av navbar /sandra */
 header {
-  border: 1px solid red;
+  *border: 1px solid red;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(231, 23, 23, 0), rgba(255, 255, 255, 0.945), white), url("Bilder/nice-christmas-packages-white-table.jpg");
   background-size: 100%;
   padding-top: 20vw;
@@ -10,11 +10,10 @@ header {
   justify-content: center;
   height: auto;
   margin-bottom: 60px;
-  *flex-wrap: wrap;
 }
 
 h1 {
-  border: 1px solid #fa0efa;
+  *border: 1px solid #fa0efa;
   text-align: center;
   font-family: "Dancing Script", cursive;
   font-size: 9vw;
@@ -23,14 +22,14 @@ h1 {
 }
 
 nav {
-  border: 1px solid blue;
+  *border: 1px solid blue;
   width: 75vw;
   height: auto;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .nav-container {
-  border: 1px solid #ffa600;
+  *border: 1px solid #ffa600;
 }
 
 #nav-bar {
@@ -144,28 +143,11 @@ span {
 
 /* slutet av "om oss" artikeln */
 .card {
-  display: grid;
-  grid-template-areas: "card1 card2 card3 card4";
-  *justify-content: space-around;
-  *padding: 15px;
+  border: red solid 1px;
+  display: flex;
+  justify-content: center;
   transition: 0.1s;
-  *background-color: #c5004a;
-}
-
-#item1 {
-  grid-area: card1;
-}
-
-#item2 {
-  grid-area: card2;
-}
-
-#item3 {
-  grid-area: card3;
-}
-
-#item4 {
-  grid-area: card4;
+  flex-wrap: wrap;
 }
 
 .card:hover {
@@ -173,15 +155,13 @@ span {
 }
 
 .container-item {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: 200px 30px 100px 40px 30px;
-  border: 1px solid white;
+  border: 1px solid #3c1ad1;
+  *border: 1px solid white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  align-items: center;
   text-align: center;
-  *background-color: aqua;
+  width:200px;
   padding: 10px;
+  margin:30px;
 }
 
 .card-img {
@@ -190,8 +170,8 @@ span {
 }
 
 .card-p {
-  *width: 10vw;
-  padding: 5px;
+  border: lightgreen 3 px solid;
+  width: 160px;
 }
 
 .buy-btn {
