--- a/scss/kontakt.scss
+++ b/scss/kontakt.scss
@@ -1,4 +1,5 @@
-.kontakt-section{
+/* Början av styling av kontaktformulär  */
+.kontakt-section {
     height: 100vh;
     width: 100%;
     background-color: rgba(77, 109, 77, 0.315);
@@ -6,102 +7,97 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    font-family: 'Dancing Script', cursive;
-    
-}
-
-.kontakt-container{
+    font-family: "Dancing Script", cursive;
+  }
+  
+  .kontakt-container {
     width: 90%;
     max-width: 500px;
     padding: 20px;
-    box-shadow: 0px 0px 20px rgb(116, 172, 102);
+    box-shadow: 0px 0px 20px #74ac66;
     background-color: white;
     border-radius: 8px;
     margin-bottom: 20px;
     margin-top: 20px;
-}
-
-.form-h3{
+  }
+  
+  .form-h3 {
     text-align: center;
-    
-}
-
-.form-div{
+    font-size:2rem;
+  }
+  
+  .form-div {
     width: 100%;
     margin-top: 20px;
     font-size: 20px;
     position: relative;
-}
-
-
-// border ändring vid rätt och fel meddelande
-.form-div.success input{
+  }
+  
+  .form-div.success input {
     border: 2px solid green;
-}
-
-.form-div.success i.fa-check-circle{
+  }
+  
+  .form-div.success i.fa-check-circle {
     color: green;
     visibility: visible;
-}
-
-.form-div.error input{
-    border: 2px solid rgb(170, 38, 15);
-}
-
-.form-div.error i.fa-exclamation-circle{
-    color: rgb(128, 30, 0);
+  }
+  
+  .form-div.error input {
+    border: 2px solid #aa260f;
+  }
+  
+  .form-div.error i.fa-exclamation-circle {
+    color: #801e00;
     visibility: visible;
-}
-
-.form-div i{
-visibility: hidden;
-position: absolute;
-top: 40px;
-right: 10px;
-}
-
-.form-div small{
+  }
+  
+  .form-div i {
+    visibility: hidden;
+    position: absolute;
+    top: 40px;
+    right: 10px;
+  }
+  
+  .form-div small {
     visibility: hidden;
     position: absolute;
     top: 66px;
     left: 0;
     font-size: 1vw;
-}
-
-.form-div.error small{
+  }
+  
+  .form-div.error small {
     visibility: visible;
     color: red;
-}
-
- .form-div input,
- .form-div textarea{
-width: 100%;
-padding: 5px;
-font-size: 18px;
-border: 1px solid rgb(48, 90, 67);
-margin-top: 5px;
-}
-
-textarea{
+  }
+  
+  .form-div input,
+  .form-div textarea {
+    width: 100%;
+    padding: 5px;
+    font-size: 18px;
+    border: 1px solid #305a43;
+    margin-top: 5px;
+  }
+  
+  textarea {
     resize: vertical;
-}
-
-button[type="submit"] {
+  }
+  
+  button[type=submit] {
     width: 100%;
     border: none;
     outline: none;
     padding: 20px;
     font-size: 24px;
     border-radius: 8px;
-    color: rgb(135, 165, 115);
+    color: #87a573;
     text-align: center;
     cursor: pointer;
     margin-top: 10px;
-    font-family: 'Dancing Script', cursive;
+    font-family: "Dancing Script", cursive;
   }
   
-  button[type="submit"]:hover{
-    background-color: rgb(73, 90, 65);
+  button[type=submit]:hover {
+    background-color: #495a41;
   }
-
-  
