--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,48 +1,44 @@
-body {
-  display: flex;
-  place-content: end;
-  flex-direction: column;
-  height: 100vh; 
-}
-
-footer{
+.content{
+  font-family: Arial, Helvetica, sans-serif;
   line-height: 24px;
   color: #ffff;
-}
-
-footer .design{
+  width: 100%;
   background-color: rgba(41, 71, 53, 0.863);
-  padding: 16px;
-  padding-top: 48px;
+  display:flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-bottom: 40px;
 }
 
-footer .content{
-  max-width: 1080px;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 16px;
-  
+
+.footer-h2 {
+  font-size: 1.3rem;
+  padding:30px 0px;
+  color:rgb(243, 243, 243);
 }
 
-footer .footer-h2{
-  font-size: 21px;
-  padding-block: 16px;
+.section, .section-popular, .section-nyhetsbrev {
+  margin:30px;
+  width:300px;
 }
 
-footer .content a{
+footer .content a {
   text-decoration: none;
+  padding: 15px 0px; 
   display: block;
-  padding-block: 12px;
   color: #ffff;
   opacity: 0.65;
 }
 
-footer .content a:hover{
+footer .content a:hover {
   opacity: 1;
   color: rgba(248, 248, 248, 0.993);
   font-size: 18px;
 }
+
+#email{
+  margin-bottom: 20px;
+  }
 
 footer input{
   border-style: solid;
@@ -50,63 +46,55 @@ footer input{
   line-height: 24px;
   padding: 12px 16px;
   font-size: 1rem;
-  margin-block: 8px;
   border-radius: 8px;
   border-width: 2px;
 }
 
-@media (max-width: 331px) {
-  footer input {
-    font-size: 10px;
-    border-style: solid;
-    width: 100%;
-    line-height: 12px;
-    padding: 6px 8px;
-    margin-block: 4px;
-    border-radius: 4px;
-    border-width: 1px;
-    float: none; } }
 
-footer input[type="email"] {
+
+footer input[type=email] {
   background-color: rgba(252, 252, 252, 0.486);
-  color: rgb(55, 80, 55);
+  color: #375037;
 }
 
-footer input[type="email"]:hover,
-footer input[type="email"]:focus {
-    background-color: rgb(247, 242, 242);
+footer input[type=email]:hover,
+footer input[type=email]:focus {
+  background-color: #f7f2f2;
 }
 
-footer input[type="submit"] {
-  color: rgb(73, 90, 65);
+footer input[type=submit] {
+  color: #495a41;
 }
 
-footer input[type="submit"]:hover{
+footer input[type=submit]:hover {
   background-color: rgba(97, 134, 112, 0.568);
   color: #ffff;
 }
 
-footer .social{
- position: relative;
- left: 20%;
- padding-left: 10px;
- padding-right: 10px;
+footer .social {
+  position: relative;
+  left: 20%;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-footer .social i{
+footer .social i {
   font-size: 32px;
   padding: 12px;
   text-align: center;
 }
 
-footer .social i:hover{
-  position: relative; 
+footer .social i:hover {
+  position: relative;
   top: -5px;
 }
 
-footer .notice{
-  padding-top: 30px;
+footer .notice {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 30px 0px;
   text-align: center;
   color: rgba(255, 255, 255, 0.479);
   font-size: 1rem;
+  width:100%;
+  background-color: rgba(26, 26, 26, 0.863);
 }
