--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,4 +1,3 @@
-/* Början av header + navbar /sandra */
 header {
   *border: 1px solid red;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(231, 23, 23, 0), rgba(255, 255, 255, 0.945), white), url("Bilder/nice-christmas-packages-white-table.jpg");
@@ -8,7 +7,7 @@ header {
   display: flex;
   justify-content: center;
   height: auto;
-  margin-bottom: 60px;
+  margin-bottom: 6vh;
 }
 
 h1 {
@@ -75,12 +74,12 @@ li a:hover:not(.active) {
   float: right;
 }
 
-@media screen and (max-width: 790px) {
+@media screen and (max-width: 650px) {
   header {
     margin-bottom: 40px;
     width: 100vw;
-    height: 330px;
-    margin-bottom: 50vh;
+    height: 25vh;
+    margin-bottom: 60vh;
   }
 
   nav, .loggain, .cart {
