--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,97 +1,75 @@
+/* början av styling av cards/items */
+
+
+.main-header-container{
+  margin:5vh 5vw;
+  text-align: center;
+}
+
+.main-header {
+  *border:red 3px solid;
+  font-family: "Dancing Script", cursive;
+  font-size:3rem;
+}
+
 .card {
-  display: grid;
-  grid-template-areas: "card1 card2 card3 card4";
-  *justify-content: space-around;
-  *padding: 15px;
+  *border: red solid 1px;
+  display: flex;
+  justify-content: center;
   transition: 0.1s;
-  *background-color: #c5004a;
+  flex-wrap: wrap;
+  padding-bottom: 10vh;
 }
-#item1 {
-  grid-area: card1;
-}
-#item2 {
-  grid-area: card2;
-}
-#item3 {
-  grid-area: card3;
-}
-#item4 {
-  grid-area: card4;
-}
+
 .card:hover {
   box-shadow: 0 8px px 0 rgba(0, 0, 0, 0.2);
 }
 
 .container-item {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: 200px 30px 100px 40px 30px;
+  *border: 1px solid #3c1ad1;
   border: 1px solid white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  align-items: center;
   text-align: center;
-  *background-color: aqua;
-  padding: 10px;
+  width:220px;
+  padding: 20px 10px 20px;
+  margin:20px;
 }
 
 .card-img {
-  height: 10rem;
-  width: 10rem;
+  height: 11rem;
+  width: 11rem;
+  margin-bottom:10px;
 }
+
 .card-p {
-  *width: 10vw;
-  padding: 5px;
+  *border: rgb(243, 9, 192) 1px solid;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:0.8rem;
+  width: 175px;
+  height:95px;
+  margin-left:10px;
+  margin-bottom: 25px;
+  text-align:left;
 }
+
 .buy-btn {
   background-color: #2ea44f;
   color: white;
   padding: 10px;
-  width: 100%;
-  border-radius: 5px;
+  width: 60%;
+  border-radius: 25px;
   font-weight: bold;
-  margin-bottom: 0;
-  position: relative;
   border: none;
-  &:hover {
-    background-color: white;
-    color: black;
-  }
 }
-.pris {
-  color: #c5004a;
+.buy-btn:hover {
+  background-color: rgb(18, 129, 23);
 }
 
-.loggain {
-  float: right;
-  background-color: #2ea44f;
-  color: white;
-  padding: 10px;
-  width: 100%;
-  border-radius: 5px;
-  border: none;
-  width: 100px;
-  height: 50px;
-  margin: 10px;
-  &:hover {
-    background-color: white;
-  }
-  a {
-    color: white;
-    text-decoration: none;
-    &:hover {
-      color: black;
-      background-color: white;
-    }
-  }
+.pris {
+  color: #c5004a;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:1.2rem;
+  margin-bottom:10px;
 }
-@media (max-width: 780px) {
-  .card {
-    display: grid;
-    grid-template-areas:
-      "card1"
-      "card2"
-      "card3"
-      "card4";
-    grid-gap: 10px;
-  }
-}
+
+/* slutet av styling av cards/items i main  */
