--- a/scss/header.scss
+++ b/scss/header.scss
@@ -24,6 +24,7 @@ nav {
   *border: 1px solid blue;
   width: 75vw;
   height: auto;
+  font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -55,7 +56,7 @@ li:last-child {
 li a {
   border-radius: 25px;
   display: block;
-  color: #4d4d4d;
+  color: #696969;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
