--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ nav {
   *border: 1px solid blue;
   width: 75vw;
   height: auto;
+  font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -56,7 +57,7 @@ li:last-child {
 li a {
   border-radius: 25px;
   display: block;
-  color: #4d4d4d;
+  color: #696969;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -146,6 +147,18 @@ span {
 /* slutet av "om oss" artikeln */
 
 /* början av styling av cards/items */
+
+
+.main-header-container{
+  margin:5vh 5vw;
+  text-align: center;
+}
+
+.main-header {
+  *border:red 3px solid;
+  font-family: "Dancing Script", cursive;
+  font-size:3rem;
+}
 
 .card {
   *border: red solid 1px;
