--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ nav {
   *border: 1px solid blue;
   width: 75vw;
   height: auto;
-  font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -57,7 +56,7 @@ li:last-child {
 li a {
   border-radius: 25px;
   display: block;
-  color: #696969;
+  color: #4b4b4b;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -88,7 +87,6 @@ li a:hover:not(.active) {
 
   nav, .loggain, .cart {
     float: none;
-    
   }
 
   .cart {
@@ -105,6 +103,93 @@ li a:hover:not(.active) {
   }
 }
 /* slutet av navbar */
+
+
+/* Början loggain styling på index.html*/
+
+nav .loggain {
+  background-color: green;
+  float: right;
+  padding: 10px;
+  width: 100%;
+  border-radius: 25px;
+  border: none;
+  width: 150px;
+  height: 45px;
+  margin-top: 3px;
+}
+
+nav .loggain:hover {
+  background-color: green;
+
+}
+
+nav .loggain a {
+  background-color: green;
+  text-decoration: none;
+}
+
+nav .loggain a:hover {
+  background-color: green;
+  color:white;
+
+}
+
+/* början av stylingen till loggain-knappen på loggain.html  */
+.loginDiv,
+.card-update-div,
+.creating-card {
+  display: none;
+  }
+
+
+.loginDiv {
+  padding:30px;
+  background-color: rgb(241, 239, 239);
+  border-radius: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  width:260px;
+  text-align: center;
+}
+
+#username, #password {
+  margin-bottom: 20px;
+}
+
+input {
+  border-radius:25px;
+  padding:10px;
+  border:none;
+  text-align: center;
+}
+
+
+.login-btn {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  background-color: rgb(224, 240, 226);
+  border:none;
+  border-radius:10px;
+  padding:10px;
+  width: 100px;
+  }
+
+.creating-card {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  background-color: rgb(212, 212, 212);
+  text-decoration: none;
+  border:none;
+  border-radius:10px;
+  padding:10px;
+  width: 260px;
+}
+
+/* slutet av stylingen */
+
+
 /* början av "om oss" artikeln */
 span {
   font-family: Arial, Helvetica, sans-serif;
@@ -222,32 +307,6 @@ span {
 }
 
 /* slutet av styling av cards/items i main  */
-
-/* början av stylingen till loggain-knappen  */
-.loggain {
-  float: right;
-  background-color: #2ea44f;
-  color: white;
-  padding: 10px;
-  width: 100%;
-  border-radius: 5px;
-  border: none;
-  width: 100px;
-  height: 50px;
-  margin: 10px;
-}
-.loggain:hover {
-  background-color: white;
-}
-.loggain a {
-  color: white;
-  text-decoration: none;
-}
-.loggain a:hover {
-  color: black;
-  background-color: white;
-}
-/* slutet av stylingen till loggain-knappen  */
 
 
 * {
@@ -367,39 +426,6 @@ footer .notice {
   background-color: rgba(26, 26, 26, 0.863);
 }
 
-/* Här börjar logga-in styling  */
-.loginDiv,
-.card-update-div,
-.creating-card {
-  display: none;
-}
-
-.loggain {
-  float: right;
-  background-color: #2ea44f;
-  color: white;
-  padding: 10px;
-  width: 100%;
-  border-radius: 25px;
-  border: none;
-  width: 150px;
-  height: 45px;
-  margin-top: 3px;
-}
-
-.loggain:hover {
-  background-color: rgb(224, 224, 224);
-}
-
-.loggain a {
-  color: white;
-  text-decoration: none;
-}
-
-.loggain a:hover {
-  color: black;
-  background-color: white;
-}
 
 /* Början av styling av kontaktformulär  */
 .kontakt-section {
