--- a/scss/loggain.scss
+++ b/scss/loggain.scss
@@ -1,31 +1,82 @@
+/* Början loggain styling på index.html*/
+
+nav .loggain {
+  background-color: green;
+  float: right;
+  padding: 10px;
+  width: 100%;
+  border-radius: 25px;
+  border: none;
+  width: 150px;
+  height: 45px;
+  margin-top: 3px;
+}
+
+nav .loggain:hover {
+  background-color: green;
+}
+
+nav .loggain a {
+  background-color: green;
+  text-decoration: none;
+}
+
+nav .loggain a:hover {
+  background-color: green;
+  color:white;
+
+}
+
+/* början av stylingen till loggain-knappen på loggain.html  */
 .loginDiv,
 .card-update-div,
 .creating-card {
   display: none;
+  }
+
+
+.loginDiv {
+  padding:30px;
+  background-color: rgb(241, 239, 239);
+  border-radius: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  width:260px;
+  text-align: center;
 }
 
-/* början av stylingen till loggain-knappen  */
-.loggain {
-  float: right;
-  background-color: #2ea44f;
-  color: white;
-  padding: 10px;
-  width: 100%;
-  border-radius: 5px;
-  border: none;
+#username, #password {
+  margin-bottom: 20px;
+}
+
+input {
+  border-radius:25px;
+  padding:10px;
+  border:none;
+  text-align: center;
+}
+
+
+.login-btn {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  background-color: rgb(241, 241, 241);
+  border:none;
+  border-radius:10px;
+  padding:10px;
   width: 100px;
-  height: 50px;
-  margin: 10px;
-}
-.loggain:hover {
-  background-color: white;
-}
-.loggain a {
-  color: white;
+  }
+
+.creating-card {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  background-color: rgb(228, 228, 228);
   text-decoration: none;
+  border:none;
+  border-radius:10px;
+  padding:10px;
+  width: 260px;
 }
-.loggain a:hover {
-  color: black;
-  background-color: white;
-}
-/* slutet av stylingen till loggain-knappen  */
+
+/* slutet av stylingen */
