--- a/scss/loggain.scss
+++ b/scss/loggain.scss
@@ -1,7 +1,7 @@
 /* Början loggain styling på index.html*/
 
 nav .loggain {
-  background-color: green;
+  background-color: rgb(84, 170, 84);
   float: right;
   padding: 10px;
   width: 100%;
@@ -9,21 +9,20 @@ nav .loggain {
   border: none;
   width: 150px;
   height: 45px;
-  margin-top: 3px;
-}
+  margin: 3px;
+  text-decoration: none;
 
-nav .loggain:hover {
-  background-color: green;
 }
 
 nav .loggain a {
-  background-color: green;
   text-decoration: none;
+  color:white;
 }
 
-nav .loggain a:hover {
+nav .loggain a:hover a:visited {
   background-color: green;
   color:white;
+  text-decoration: none;
 
 }
 
